переписано приложение. добавлена подсветка, отображение списка слов, новые стили

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -191,3 +191,12 @@ p, footer a, .stats-info h2 {
 .word-title {
   font-size: 24px;
 }
+
+.sv-detected {
+    background-color: #ffb62752;
+    padding: 3px 2px;
+    margin: 0 -2px;
+    color: #e94b3d;
+    font-style: normal;
+    border-radius: .2em;
+}
