улучшил подветку и скорость распознования

--- a/website/templates/slovoved.html
+++ b/website/templates/slovoved.html
@@ -14,7 +14,7 @@
     <script src="{% static 'vendor/quill/quill.min.js' %}"></script>
     <script src="{% static 'vendor/quill/quill.core.js' %}"></script>
 
-    <script src="{% static 'js/app.js' %}" async></script>
+    <script src="{% static 'js/slovoved.js' %}" async></script>
     {% csrf_token %}
     <script type="text/javascript">
     // using jQuery
