--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -33,7 +33,7 @@
             <div class="col-lg-12 h-100">
                 <div class="text-muted small mb-4 mb-lg-0">
                     <a href="https://cyberkolhoz.ru/" title='Кибернетический Колхоз "Батмас"'>&copy; КиберКолхоз "Батмас"</a> |
-                    <a href="https://aipromo.agilecrm.com/help/article/5764577597849600/о-сервисе" target="_blank" title='О сервисе'>О Сервисе</a>
+                    <a href="https://cyberkolhoz.ru/page/решения/" target="_blank" title='О сервисе'>О Сервисе</a>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
-        if(window.location.host != '') {
+        if(window.location.host.indexOf('localhost') != 0) {
           (function (d, w, c) {
             (w[c] = w[c] || []).push(function() {
               try {
