добавлена проверка страниц

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -21,8 +21,9 @@
                 </div>
                 <div class="col-md-6 mx-auto">
                     <div class="form-row">
-                        <div class="col-md-10 col-lg-8 col-sm-7 col-xl-7 mx-auto">
-                            <a href="#cleanup" class="btn btn-block btn-lg btn-primary">Начать</a>
+                        <div class="col-md-10 mx-auto">
+                            <a href="/weboved/" class="btn btn-lg btn-primary">Проверить Вебсайт</a>
+                            <a href="/slovoved/" class="btn btn-lg btn-primary">Проверить Текст</a>
                         </div>
                     </div>
                 </div>
@@ -31,49 +32,6 @@
             <br>
         </div>
     </header>
-
-    <section class="testimonials text-center" id="cleanup">
-        <div class="container-fluid p-0">
-            <h3 class="mb-4">Вставьте текст</h3>
-            <form action="">
-              <textarea name="input" id="text" cols="100" rows="15" placeholder="Вставьте текст"></textarea>
-            </form>
-
-            <div class="col-md-7 col-lg-7 col-sm-7 col-xl-6 mx-auto">
-                <div class="col-md-7 col-lg-7 col-sm-7 col-xl-6 mx-auto">
-                    <button id="check" class="btn btn-block btn-lg btn-primary">Проверить</button>
-                </div>
-            </div>
-
-            <div class="container-fluid p-0" id="resultdiv" style="display:none">
-                <div class="container">
-                    <br>
-                    <hr>
-                    <br>
-                    <h3 class="mb-4">Вывод</h3>
-
-                    <div class="row">
-                        <div class="col-md-6 order-lg-1">
-                            <p class="words text-left"></p>
-                        </div>
-                        <div class="col-md-6 order-lg-2">
-                            <p>Всего найдено слов: <span id="wordcount"></span></p>
-                            <table class="table table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Количество</th>
-                                        <th>Слово</th>
-                                        <th>Замена</th>
-                                    </tr>
-                                </thead>
-                                <tbody class="stats"></tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="call-to-action text-white text-center">
         <div class="overlay"></div>
