обновил ссылку обратной связи

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col-lg-12 h-100">
                 <div class="text-muted small mb-4 mb-lg-0">
-                    <a href="https://cyberkolhoz.ru/page/решения/" target="_blank" title='О сервисе'>Обратная Связь</a>  |
+                    <a href="mailto:roman@cyberkolhoz.ru" target="_blank" title='Обратная Связь'>Обратная Связь</a>  |
                     <a href="https://cyberkolhoz.ru/page/решения/" target="_blank" title='О сервисе'>О Сервисе</a> |
                     <a href="https://gitlab.com/cyberkolhoz/slovoved" target="_blank" title='Код Проекта'>Исходный Код</a> |
                     <a href="https://cyberkolhoz.ru/" title='Кибернетический Колхоз "Батмас"'>&copy; КиберКолхоз "Батмас"</a>
