--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -16,7 +16,8 @@
             <br>
             <div class="row">
                 <div class="col-xl-9 mx-auto">
-                    <h1>За чистоту Русского языка!🇷🇺</h1>
+                    <h1>За чистоту Русского языка!</h1>
+                    <h2>🇦🇿🇦🇲🇧🇾🇬🇪🇰🇿🇰🇬🇱🇻🇱🇹🇲🇩🇷🇺🇹🇯🇹🇲🇺🇿🇺🇦🇪🇪</h2>
                     <h2 class="mb-5">Узнай как очистить текст от ненужных заимствований</h2>
                 </div>
                 <div class="col-md-6 mx-auto">
