добавлена возможность наблюдения за группами в Вконтакте, добавлен docker-compose.yml файл для упрощения разработки

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -23,8 +23,11 @@
                 <div class="col-md-6 mx-auto">
                     <div class="form-row">
                         <div class="col-md-10 mx-auto">
-                            <a href="/weboved/" class="btn btn-lg btn-primary">Проверить Вебсайт</a>
                             <a href="/slovoved/" class="btn btn-lg btn-primary">Проверить Текст</a>
+                            <a href="/weboved/" class="btn btn-lg btn-primary">Проверить Вебсайт</a>
+                            <br>
+                            <br>
+                            <a href="/saitoved/" class="btn btn-lg btn-primary">Статистика</a>
                         </div>
                     </div>
                 </div>
