улучшено отображение источников и записей

--- a/website/templates/saitoved_records.html
+++ b/website/templates/saitoved_records.html
@@ -14,26 +14,46 @@
 
     <section class="container">
         <br>
-        <h5>{{object_list.0.source.title}} - {{object_list.0.source.get_kind_display}}</h5>
-        <br>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/saitoved/">Источники</a></li>
+                <li class="breadcrumb-item active" aria-current="page">{{object_list.0.source.title}} - {{object_list.0.source.get_kind_display}}</li>
+            </ol>
+        </nav>
     </section>
 
     <section class="container">
-        {% for source in object_list %}
-            <p>{{ source.text|truncatewords:20 }}</p>
-            {% if source.report %}
-                {% for k, v in source.report.items %}
-                <b style="color: red">{{ k }}</b> - <b>{{ v }}</b>,
-                {% endfor %}
-            {% else %}
-                <b style="color: green">Чисто!</b>
-            {% endif %}
-            <p>Ссылка: <a href="{{source.url}}" target="_blank">{{source.url}}</a></p>
-            <hr>
+        <h5>{{object_list.0.source.title}} - {{object_list.0.source.get_kind_display}}.</h5>
+        <span>Ссылка: <a href="{{object_list.0.source.url}}" target="_blank">{{object_list.0.source.url}}</a></span>
+        <p>Следующее обновление {{object_list.0.source.next_update_time}}</p>
+    </section>
+
+    <section class="container">
+        <ul class="list-group">
+        {% for record in object_list %}
+            <li class="list-group-item">
+                <p>{{ record.text|truncatewords:20 }} <a href="{{record.url}}" target="_blank">Полный текст</a></p>
+                {% if record.report %}
+                    <div class="alert alert-danger" role="alert">
+                        {% with total=record.report.items|length %}
+                            Найден{{total|pluralize:"о"}} {{total}} англицизм{{total|pluralize:"ов"}}
+                        {% endwith %}
+                    <hr>
+                    {% for k, v in record.report.items %}
+                    <p style="color: red">{{ k }} - <b>{{ v }}</b></p>
+                    {% endfor %}
+                    </div>
+                {% else %}
+                    <div class="alert alert-success" role="alert">
+                        Прелестно! Англицизмов не найдено.
+                    </div>
+                {% endif %}
+            </li>
         {% endfor %}
         </ul>
 
         {% if is_paginated %}
+        <br>
         <div class="pagination">
             <span class="step-links">
             {% if page_obj.has_previous %}
