заменил пример на образец

--- a/website/templates/slovoved.html
+++ b/website/templates/slovoved.html
@@ -44,10 +44,10 @@
                 <div class="stats-example">
                     <p>
                     Не знаете с чего начать?
-                    Вставьте текст на русском языке или попробуйте наш пример.
+                    Вставьте текст на русском языке или попробуйте наш образец.
                     </p>
                     <p class="text-left">
-                        <button class="btn btn-danger btn-lg example-inert">Вставить пример</button>
+                        <button class="btn btn-danger btn-lg example-inert">Вставить образец</button>
                     </p>
                 </div>
                 <div class="stats-info" style="display:none">
