добавлено пробное уведомление о новых записях

--- a/website/templates/saitoved_records.html
+++ b/website/templates/saitoved_records.html
@@ -23,7 +23,7 @@
     </section>
 
     <section class="container">
-        <h5>{{object_list.0.source.title}} - {{object_list.0.source.get_kind_display}}.</h5>
+        <h5>{{object_list.0.source.title}} - {{object_list.0.source.get_kind_display}}</h5>
         <span>Ссылка: <a href="{{object_list.0.source.url}}" target="_blank">{{object_list.0.source.url}}</a></span>
         <p>Следующее обновление {{object_list.0.source.next_update_time}}</p>
     </section>
